<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DataHU</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="text">文字</string>
    <string name="content">内容</string>
    <string name="something">一些事</string>
    <string name="monosheet">单元格</string>
       
    <string name="confirm">确定</string>
   
    <string name="menu_save">图像保存</string>
    
    <string name="menu_setting">格式设置</string>
    <string name="menusetxy">坐标轴标签</string>
    <string name="menusetfigure">图像样式</string>
        
    <string name="menu_delete">剔除异常数据</string>
    <string name="deletetext">选中要剔除的数据</string>
    <string name="deleteconfirm">确定剔除</string>
    <string name="deletecancel">清空选中</string>
    
    <string name="menu_function">拟合函数</string>
    <string name="menunofit">清除拟合结果</string>
    <string name="menuyx">y=ax+b</string>
    <string name="menuyfunx">n次多项式</string>
    <string name="yfunxhint">建议n大于0</string>
    <string name="yfunxtitle">请输入次数n</string>
    <string name="menuylnx">y=aln(x)+b</string>
    <string name="menulnyx">ln(y)=ax+b</string>
    <string name="menulnylnx">ln(y)=aln(x)+b</string>
    <string name="menuyabx">y=ab^x+c</string>
    <string name="menuyaxb">y=ax^b+c</string>
    
    <string name="numofnum">请输入大于0的整数</string>
    <string name="smoothline">平滑</string>
    <string name="brokenline">折线</string>
    <string name="noline">无</string>
    <string name="showy">横向网格</string>
    <string name="showx">纵向网格</string>
    <string name="showmain">主要网格</string>
    <string name="showdetail">细致网格</string>
    <string name="noshow">无网格线</string>
    <string name="xytitle">物理量含义和单位</string>
    <string name="setconfirm">确定</string>
    <string name="setcancel">取消</string>
    <string name="yornshow">显示网格</string>
    <string name="showline">网格样式</string>
    <string name="linear">连接线样式</string>
    <string name="numofnumtxt">小数显示位数</string>
    <string name="numofnumhint">已设置为</string>
    <string name="xtitletxt">x轴标签</string>
    <string name="ytitletxt">y轴标签</string>
</resources>
