<?xml version="1.0" encoding="UTF-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/graphsetfigure"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/showline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="right"
            android:text="@string/showline"
            android:textColor="#7FFFD4"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/showlineselect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="right"
            android:text="@string/linear"
            android:textColor="#7FFFD4"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/linearrad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/smoothline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/smoothline"
                android:textColor="#7FFFD4"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/brokenline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/brokenline"
                android:textColor="#7FFFD4"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/noline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/noline"
                android:textColor="#7FFFD4"
                android:textSize="16sp" />
        </RadioGroup>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/numofnumtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:text="@string/numofnumtxt"
            android:textColor="#7FFFD4"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/numofnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="1234567890"
            android:ems="8"
            android:inputType="number"
            android:singleLine="true"
            android:textSize="15sp" >

            <requestFocus />
        </EditText>
    </TableRow>
    
 

</TableLayout>